--- a/src/pages/services/index.html
+++ b/src/pages/services/index.html
@@ -121,7 +121,7 @@
           </li>
           <li class="pt-4">
             <a
-              class="hover:border-b-4 hover:border-black"
+              class="hover:border-b-4 hover:border-black uppercase"
               href="https://wana-agency.netlify.app/contact"
               >Contact</a
             >
